# ditto_bot_rust

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config  config.toml
.github/workflows/: rust.yml
docker/: Dockerfile  build.sh  docker-compose.yml  drone.yml  push.sh
src/: bot.rs  discord.rs  main.rs  message.rs  slack.rs  test.rs
src/auth/: mod.rs
src/discord/: mod.rs
src/message_handler/: mod.rs  namuwiki_handler.rs
src/modules/: chatgpt.rs  gemini.rs  mhw.rs  mod.rs  namuwiki.rs  ph.rs  surplus.rs  twitter.rs
src/slack/: mod.rs  protocol.rs  test.rs
src/slack/auth/: test_body
src/slack_handler/: client_wrapper.rs  mod.rs  slack_handler.rs
