[package]
name = "rust-test"
version = "0.1.0"
authors = ["장승호(Seung Ho Jang) <shjang1992@gmail.com>", "Seungmin Lee <elenesgu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = ""
url = ""
anyhow = "*"

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2.0", features = ["full"] }

actix-web = { version="2.0.0", features=["openssl"] }
actix-rt = "1.0.0"
actix = "0.9"

openssl = "0.10"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

ctrlc = "3.0"
hmac = "0.7.1"
sha2 = "0.8.1"

futures = "0.3"
