[package]
name = "ditto-bot-rust"
version = "0.1.0"
authors = ["장승호(Seung Ho Jang) <shjang1992@gmail.com>", "Seungmin Lee <elenesgu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
url = "1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
bytes = "*"

reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

axum = { version = "0.4", features = ["headers"] }
tower-http = { version = "0.2", features = ["auth"] }

rustls = "0.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

hmac = "0.12"
sha2 = "0.10"

futures = "0.3"
lazy_static = "1.4.0"
rand = "0.7.3"
redis = "0.16.0"

log = "0.4.11"
env_logger = "0.8.1"

[features]
check-req = []
