[package]
name = "ditto-bot-rust"
version = "0.1.0"
authors = ["장승호(Seung Ho Jang) <shjang1992@gmail.com>", "Seungmin Lee <elenesgu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
url = "2"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
bytes = "*"
once_cell = "1"

reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

axum = { version = "0.6.20", features = ["headers"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"], optional = true }
tower-http = { version = "0.4.4", features = ["auth"] }
tower = "*"
http = "*"
hyper = "*"

rustls = "0.21.8"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

hmac = "0.12"
sha2 = "0.10"

futures = "0.3"
rand = "0.8"
redis = "0.23.3"

log = "0.4.11"
env_logger = "0.10.0"
reqwest-eventsource = "0.5.0"
percent-encoding = "2.3.1"

[features]
check-req = []
use-ssl = ["axum-server"]
